--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
       src="https://kit.fontawesome.com/604b24281b.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -45,24 +51,30 @@
           exciting prizes
         </h1>
 
-        <h3>Top 3 winners will receive a cash prize of 1,000 each</h3>
+        <h3>Top 3 winners will receive a cash prize of ₹1,000 each</h3>
         <h3>
           Top 10 get a featured post on our page for free!
         </h3>
       </section>
 
+      <hr />
+
       <section>
-        <h2>Rules</h2>
+        <h2>Rules for the contest</h2>
         <h3>
           Stand alone pictures of you or your ride aren't allowed, you must be
           with your ride
         </h3>
         <h3>Rule 2</h3>
         <h3>Rule 3</h3>
+        <h3>An ideal picture following all the rules is also shared</h3>
+        <img src="images/1-1-copy.jpg" />
       </section>
 
+      <hr />
+
       <section>
-        <h3>Sign In Options</h3>
+        <h3>Sign In to submit</h3>
         <button type="button" class="btn btn-lg btn-outline-primary sign-in">
           <i class="fab fa-facebook-square"></i> Facebook
         </button>
