--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h3>Rule 2</h3>
         <h3>Rule 3</h3>
         <h3>An ideal picture following all the rules is also shared</h3>
-        <img src="images/1-1-copy.jpg" />
+        <img src="https://i.pinimg.com/564x/2d/95/83/2d95831f8c0791b1e05bf025711dea98.jpg" />
       </section>
 
       <hr />
